<resources>
    <string name="app_name" translatable="false">Comet</string>
    <string name="todo" translatable="false">TODO</string>

    <string name="error_alert_title">Error</string>
    <string name="url">URL</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>

    <!-- Preferences General -->
    <string name="pref_general_header">General</string>
    <string name="pref_home_title">Home page</string>
    <string name="pref_home_set">Set last visited page as home page</string>
    <string name="no_current_url">No current URL.</string>

    <!-- Preference Protocol -->
    <string name="pref_protocol_header">Protocol</string>
    <string name="pref_connection_timeout_title">Connection timeout (seconds)</string>
    <string name="pref_read_timeout_title">Read timeout (seconds)</string>

    <!-- Newly added -->

    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="identities">Identities</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="identity_key_setup">Setup key pair for this identity</string>
    <string name="identity_name">Label</string>
    <string name="generating_keypair">Generating client certificate…</string>
    <string name="identity_alias_title">Keystore reference</string>
    <string name="edit_identity">Edit identity</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_identity_delete">Are you sure you want to delete this identity? The client certificate cannot be retrieved afterwards.</string>
    <string name="edit">Edit</string>
    <string name="identity_usages">Active URL path</string>
    <string name="input_common_name">Enter a name to use as the certificate\'s subject common name. This can be left empty.</string>
    <string name="tls_version">TLS version</string>
    <string name="open">Open</string>
    <string name="download_completed">File downloaded.</string>
    <string name="image_download_completed">Image downloaded.</string>

</resources>