<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_general_header">

        <EditTextPreference
            app:key="home"
            app:title="@string/pref_home_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="home_set"
            app:title="@string/pref_home_set" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_protocol_header">

        <DropDownPreference
            app:key="tls_version"
            app:entries="@array/tls_version_entries"
            app:entryValues="@array/tls_version_values"
            app:defaultValue="TLSv1.3"
            app:useSimpleSummaryProvider="true"
            app:title="@string/tls_version" />

        <SeekBarPreference
            android:defaultValue="10"
            android:max="60"
            app:key="connection_timeout"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/pref_connection_timeout_title" />

        <SeekBarPreference
            android:defaultValue="10"
            android:max="60"
            app:key="read_timeout"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:title="@string/pref_read_timeout_title" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>